More JVM configuration and an attempt at more verbose logging for test start/completion with an extension